--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: Build
 on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -7,7 +8,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Compile code
         run: make
+        # Specify if Makefile is not in the root, e.g., working-directory: src
+
+      - name: Cleanup
+        run: find . -type f ! -name '*.out' -delete
+        # Adjust this command based on your build outputs
+
       - uses: actions/upload-artifact@v3
         with:
           name: compiled-app
-          path: .
+          path: build/
+        # Adjust the path to point to your specific build output directory or files
+
